# FEM-SiWiR2

./: CMakeLists.txt  CMakeLists.txt~
CG Solver/: conjugateGradient.m
CG Solver/Overloading classes/: Matrix.h  Type.hpp  Vector.cpp  Vector.h  main.cpp
CG Solver/assignmentA4/: Matrix.h~
Raju_Work_Do_NOT_Delete/: Solver.h~
Raju_Work_Do_NOT_Delete/Main Work/: Matrix.cpp  Matrix.cpp~  Solver.cpp~  Solver.hpp  Vector.cpp  Vector.cpp~  Vector.hpp  a.out  main.cpp  main.cpp~
include/: EigenSolver.hpp  Face.hpp  Matrix.hpp  Mesh.hpp  ProblemFormulate.hpp  Solver.hpp  Type.hpp  Vertex.hpp
include_colsamm/: Colsamm.h
src/: EigenSolver.cpp  Face.cpp  Matrix.cpp  Mesh.cpp  ProblemFormulate.cpp  Solver.cpp  Vector.cpp  Vertex.cpp
test/: main.cpp
